2003-04-30  Kevin Vandersloot <kfv101@psu.edu>

	* prop.c: Make dialog per instance so that two instances don't share. Fixes
	bug #111933
	
	* prop-map.c: fix warning

2003-04-27  Dennis Cranston <dennis_cranston at yahoo com>

	* prop.c, prop-map.c:  Fix widget padding per HIG.
	
2003-04-24  Dennis Cranston <dennis_cranston at yahoo com>

	* gkb.h, prop.c, prop-list.c:  Add a mnemonic label for the list view.
	* prop-add.c:  Add a mnemonic label for the tree view.
	* prop-map.c:  Replace OK button with a CLOSE button.
	
2003-04-23  Dennis Cranston <dennis_cranston at yahoo com>

	* prop-add.c: HIGify the Add dialog.
	* prop.c, prop-list.c: HIGify the Preferences dialog.
	* prop-map.c: HIGify the Properties dialog. 
	* preset.c: Prevent a potential crash. 
	* help/C/gkb.xml:  Update documentation.

2003-04-23  Rajkumar Siavasamy  <rajkumar.siva@wipro.com>

	* prop-add.c: Check if the keymap the user trying to add is already present
	in the list. If it's there pop a info. message dialog and don't add the keymap
	again to the list.
	Fixes Bug 111023

2003-04-20  Szabolcs Ban  <shooby@gnome.hu>

	* gkb.c, gkb.h: moved GKB_PANEL_SIZE_SMALL define
	* prop.c: if panel size is small don't show size preference
	Fixes (#76223) 

2003-04-15  Kevin Vandersloot <kfv101@psu.edu>

	* descs/Makefile.am: remove SK__x.keyprop.in since it doesn't have a
	proper language name and crashes gkb. Fixes bug #110825
	
	* descs/SK__x.keyprop.in: Put in a Fixme so that the proper language name gets
	added

2003-03-14  Shivram U  <shivaram.upadhyayula@wipro.com>

	* gkb.[ch], system.c (gkb_update_handlers): Added a new function, which
	connects or disconnects the button press event handler and the 
	gdk_window_filter.
	gkb_update(): If we are updating the keymap disconnect the handlers
	gkb_set_keymap_idle (): Reconnect the handlers.
	Fixes (#108378)

2003-03-13  Chema Celorio  <chema@celorio.com>

	* xmodmap/xmodmap.es: key 34 is dead_acute not dead_grave for spanish
	keyboards
