@@ -1,0 +1,14 @@
+[Keymap Entry]
+Countries=1
+_Name=Mongolian Sun keymap
+Codepage=iso-8859-1
+Type=type5
+Arch=Sun
+Command=gkb_xmmap mn
+
+[Country 0]
+Flag=mn.png
+Label=mn
+_Language=Mongolian
+_Country=Mongolia
+
