@@ -1,0 +1,13 @@
+[Keymap Entry]
+Countries=1
+_Name=Plain Mongolian keymap
+Codepage=iso-8859-1
+Type=105
+Arch=ix86
+Command=gkb_xmmap mn-rev
+
+[Country 0]
+Flag=mn.png
+Label=mn
+_Language=Mongolian
+_Country=Mongolia
