@@ -1,5 +1,5 @@
 ! Mongolian cyrillic keymap
-! Generated by Sanlig Badral <badral@chinggis.com>
+! Generated by Sanlig Badral <badral@users.sf.net>
 ! 2002/12/8
 !
 
@@ -8,19 +8,19 @@ clear Mod2
 clear Lock
 clear Control
 
-!charset "iso-8859-5"
+!charset "iso-10646-1"
 
 keycode   9 = Escape Escape Escape Escape
 keycode  10 = 1 exclam 1 numerosign
 keycode  11 = 2 at 2 minus
 keycode  12 = 3 numbersign 3 quotedbl
-keycode  13 = 4 dollar 4 0x010020ae
+keycode  13 = 4 dollar 4 U20AE
 keycode  14 = 5 percent 5 colon
 keycode  15 = 6 asciicircum 6 period
 keycode  16 = 7 ampersand 7 underscore
 keycode  17 = 8 asterisk 8 comma
-keycode  18 = 9 parenleft 9 parenleft
-keycode  19 = 0 parenright 0 parenright
+keycode  18 = 9 parenleft 9 percent
+keycode  19 = 0 parenright 0 question
 keycode  20 = minus underscore Cyrillic_ie Cyrillic_IE
 keycode  21 = equal plus Cyrillic_shcha Cyrillic_SHCHA
 keycode  22 = BackSpace BackSpace BackSpace BackSpace
@@ -33,7 +33,7 @@ keycode  28 = t T Cyrillic_e Cyrillic_E
 keycode  29 = y Y Cyrillic_en Cyrillic_EN
 keycode  30 = u U Cyrillic_ghe Cyrillic_GHE
 keycode  31 = i I Cyrillic_sha Cyrillic_SHA
-keycode  32 = o O 0x010004af 0x010004ae
+keycode  32 = o O U04AF U04AE
 keycode  33 = p P Cyrillic_ze Cyrillic_ZE
 keycode  34 = bracketleft braceleft Cyrillic_ka Cyrillic_KA
 keycode  35 = bracketright braceright Cyrillic_hardsign Cyrillic_HARDSIGN
