@@ -2,7 +2,12 @@
 ! Generated by Sanlig Badral <badral@users.sf.net>
 ! 2002/12/8
 !
-!charset "iso-8859-5" + barred o, straight u from "iso-10646-1"
+
+!clear Mod1
+!clear Mod2
+!clear Lock
+!clear Control
+
 !charset "iso-10646-1"
 
 keycode  9 = Escape Escape Escape Escape
@@ -16,48 +21,48 @@ keycode  16 = 7 underscore 7 ampersand
 keycode  17 = 8 comma 8 asterisk
 keycode  18 = 9 percent 9 parenleft
 keycode  19 = 0 question 0 parenright
-keycode  20 = Cyrillic_ie Cyrillic_IE minus underscore
-keycode  21 = Cyrillic_shcha Cyrillic_SHCHA equal plus
+keycode  20 = U0435 U0415 minus underscore
+keycode  21 = U0449 U0429 equal plus
 keycode  22 = BackSpace BackSpace BackSpace BackSpace
 keycode  23 = Tab ISO_Left_Tab
-keycode  24 = Cyrillic_ef Cyrillic_EF q Q
-keycode  25 = Cyrillic_tse Cyrillic_TSE w W
-keycode  26 = Cyrillic_u Cyrillic_U e E
-keycode  27 = Cyrillic_zhe Cyrillic_ZHE r R
-keycode  28 = Cyrillic_e Cyrillic_E t T
-keycode  29 = Cyrillic_en Cyrillic_EN y Y
-keycode  30 = Cyrillic_ghe Cyrillic_GHE u U
-keycode  31 = Cyrillic_sha Cyrillic_SHA i I
+keycode  24 = U0444 U0424 q Q
+keycode  25 = U0446 U0426 w W
+keycode  26 = U0443 U0423 e E
+keycode  27 = U0436 U0416 r R
+keycode  28 = U044D U042D t T
+keycode  29 = U043D U041D y Y
+keycode  30 = U0433 U0413 u U
+keycode  31 = U0448 U0428 i I
 keycode  32 = U04AF U04AE o O
-keycode  33 = Cyrillic_ze Cyrillic_ZE p P
-keycode  34 = Cyrillic_ka Cyrillic_KA bracketleft braceleft
-keycode  35 = Cyrillic_hardsign Cyrillic_HARDSIGN bracketright braceright
+keycode  33 = U0437 U0417 p P
+keycode  34 = U043A U041A bracketleft braceleft
+keycode  35 = U044A U042A bracketright braceright
 keycode  36 = Return
 keycode  37 = Control_L
-keycode  38 = Cyrillic_shorti Cyrillic_SHORTI a A
-keycode  39 = Cyrillic_yeru Cyrillic_YERU s S
-keycode  40 = Cyrillic_be Cyrillic_BE d D
+keycode  38 = U0439 U0419 a A
+keycode  39 = U044B U042B s S
+keycode  40 = U0431 U0411 d D
 keycode  41 = U04E9 U04E8 f F
-keycode  42 = Cyrillic_a Cyrillic_A g G
-keycode  43 = Cyrillic_ha Cyrillic_HA h H
-keycode  44 = Cyrillic_er Cyrillic_ER j J
-keycode  45 = Cyrillic_o Cyrillic_O k K
-keycode  46 = Cyrillic_el Cyrillic_EL l L
-keycode  47 = Cyrillic_de Cyrillic_DE semicolon colon
-keycode  48 = Cyrillic_pe Cyrillic_PE apostrophe quotedbl
+keycode  42 = U0430 U0410 g G
+keycode  43 = U0445 U0425 h H
+keycode  44 = U0440 U0420 j J
+keycode  45 = U043E U041E k K
+keycode  46 = U043B U041B l L
+keycode  47 = U0434 U0414 semicolon colon
+keycode  48 = U043F U041F apostrophe quotedbl
 keycode  49 = parenleft parenright grave asciitilde
 keycode  50 = Shift_L ISO_Prev_Group
 keycode  51 = backslash bar backslash bar
-keycode  52 = Cyrillic_ya Cyrillic_YA z Z
-keycode  53 = Cyrillic_che Cyrillic_CHE x X
-keycode  54 = Cyrillic_io Cyrillic_IO c C
-keycode  55 = Cyrillic_es Cyrillic_ES v V
-keycode  56 = Cyrillic_em Cyrillic_EM b B
-keycode  57 = Cyrillic_i Cyrillic_I b B
-keycode  58 = Cyrillic_te Cyrillic_TE m M
-keycode  59 = Cyrillic_softsign Cyrillic_SOFTSIGN comma less
-keycode  60 = Cyrillic_ve Cyrillic_VE period greater
-keycode  61 = Cyrillic_yu Cyrillic_YU slash question
+keycode  52 = U044F U042F
+keycode  53 = U0447 U0427 x X
+keycode  54 = U0451 U0401 c C
+keycode  55 = U0441 U0421 v V
+keycode  56 = U043C U041C b B
+keycode  57 = U0438 U0418 n N
+keycode  58 = U0442 U0422 m M
+keycode  59 = U044C U042C comma less
+keycode  60 = U0432 U0412 period greater
+keycode  61 = U044E U042E slash question
 keycode  62 = Shift_R ISO_Next_Group
 keycode  63 = KP_Multiply
 keycode  64 = Alt_L Meta_L
