@@ -1,3 +1,9 @@
+2003-05-06  Sanlig Badral  <badral@users.sf.net>
+
+	* descs/MN_Mongolian.keyprop.in, descs.sun/MN_Mongolian.keyprop.in,
+	* xmodmap/xmodmap.mn, xmodmap.sun/xmodmap.mn : Added mongolian
+	* keyboard.
+	
 2003-04-30  Kevin Vandersloot <kfv101@psu.edu>
 
 	* prop.c: Make dialog per instance so that two instances don't share. Fixes
